test/integration/bad/tuples/bad_unpack_tuple_overlap2.stan
generated quantities {
  array[1] tuple(int, int) tup;
  (tup, tup[1].1) = ({(1, 2)}, 3);
}
